BufferStrategy changed to BufferLayout